--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EmptyTest</string>
+    <string name="app_name">Remote</string>
     <string name="n">获取到摇动角度</string>
     <string name="zdy">自定义色值</string>
 </resources>
